--- a/StarSystem/StarSystem.csproj
+++ b/StarSystem/StarSystem.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Markov" Version="2.0.0" />
     <PackageReference Include="Troschuetz.Random" Version="5.0.1" />
   </ItemGroup>
 
